# mtyrolski.github.io

./: .gitignore  CNAME  GOOGLE_ANALYTICS_SETUP.md  README.md  _config.yml  pyproject.toml
_data/: navigation.yml
_includes/: author-profile.html  head.html  masthead.html  social-share.html
_includes/head/: custom.html
_other_papers/: enhancing_antigenic_peptide_discovery.md  mlads_explainable_ml.md
_pages/: about.md  academy.html  cv.md
_publications/: adaptive_subgoal_search.md  ebms.md  enhancing_antigenic_peptide_discovery.md  hierarchical_transformers.md  hourglass.md  mhc1.md  mlads_explainable_ml.md  opengvl.md  resolution_recursive_data_corruption.md  what_matters.md  what_matters_hierarchical_search.md
_sass/layout/: _masthead.scss  _navigation.scss  _page.scss  _sidebar.scss
_sass/theme/: _dark.scss  _default.scss
_talks/: 2023-07-01-adaptive-subgoal-search.md
assets/css/: main.scss
assets/js/: _main.js  main.min.js
images/: manifest.json
python_scripts/: generate_icons.py  webp_to_io.py
